Commit fundamentals course

--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -2,8 +2,7 @@ version: 2
 
 sources:
   - name: stripe
-    database: rawversion: 2
-
-   schema: stripe
+    database: raw
+    schema: stripe
     tables:
       - name: payment
